# Waterfall

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  watermark.py
Watermark/: Permute.py  WatermarkerBase.py  WatermarkingFn.py  WatermarkingFnFourier.py  WatermarkingFnSquare.py
group-beam-search/custom_generate/: generate.py
waterfall/: WatermarkerBase.py  WatermarkingFnFourier.py  WatermarkingFnSquare.py  permute.py  watermark.py
waterfall/Watermark/: WatermarkerBase.py
waterfall/group-beam-search/: README.md
waterfall/group-beam-search/custom_generate/: beam_search.py
