[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterfall"
version = "0.1.3"
authors = [
  { name = "Xinyuan Niu", email="aperture@outlook.sg" }
]
description = "Scalable Framework for Robust Text Watermarking and Provenance for LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "accelerate>=0.29.0",
  "numpy>=2.0.0",
  "scipy>=1.13.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.3.0",
  "transformers>=4.43.1",
]

[project.urls]
Homepage = "https://github.com/aoi3142/Waterfall"
Issues = "https://github.com/aoi3142/Waterfall/issues"

[project.scripts]
waterfall_demo = "waterfall.watermark:main"

[tool.setuptools]
packages = ["waterfall"]